--- a/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
@@ -8,9 +8,17 @@
   <label for="txtCpf">CPF</label>
   <input type="text" id="txtCpf" [(ngModel)]="cpf" />
 </div>
+<div id="email">
+  <label for="txtEmail">E-mail</label>
+  <input type="text" id="txtCpf" [(ngModel)]="email" />
+</div>
+<div id="telefone">
+  <label for="txtCpf">Telefone</label>
+  <input type="text" id="txtCpf" [(ngModel)]="cellphone" />
+</div>
 <div id="botao">
   <button id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
 </div>
 <div>
-  <h3>{{ soma }}</h3>
+
 </div>
