--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <a routerLink="/pages/cliente/cadastrar">Cadastrar Cliente</a>
 <br />
 <a routerLink="/pages/cliente/listar">Listar Clientes</a>
+<br />
+<a routerLink="/pages/automovel/cadastrar">Cadastrar Automóvel</a>
+<br />
+<a routerLink="/pages/automovel/listar">Listar Automóvel</a>
+<br />
+<a routerLink="/pages/aluguel/cadastrar">Cadastrar Aluguel</a>
+<br />
+<a routerLink="/pages/aluguel/listar">Listar Alugueis</a>
 
 <router-outlet> </router-outlet>
 <!-- É aqui que os componentes vão entrar -->
