--- a/src/app/components/pages/cliente/listar-clientes/listar-clientes.component.html
+++ b/src/app/components/pages/cliente/listar-clientes/listar-clientes.component.html
@@ -1,1 +1,34 @@
 <h1>Listar Clientes</h1>
+
+<table>
+    <tr>
+        <th>#</th>        
+        <th>Nome</th>
+        <th>CPF</th>
+        <th>E-mail</th>
+        <th>Telefone</th>
+        <th>Criado em</th>
+        <th>Remover</th>
+        <th>Alterar</th>
+        
+    </tr>
+    <tr *ngFor="let cliente of clientes">
+        <td>{{cliente.clienteId}}</td>
+        <td>{{cliente.name}}</td>
+        <td>{{cliente.cpf}}</td>
+        <td>{{cliente.email}}</td>
+        <td>{{cliente.cellphone}}</td>
+        <td>{{cliente.criadoEm}}</td> 
+        <td>
+            
+            <button (click)="remover(cliente.clienteId!)">
+                Remover
+            </button>
+        </td>
+        <td>
+            <a routerLink="/pages/cliente/cadastrar/{{ cliente.clienteId }}">
+                Alterar
+            </a>
+        </td>
+    </tr>
+</table>
