implementantion methods client-automobile-rental

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <br />
 <a routerLink="/pages/automovel/cadastrar">Cadastrar Automóvel</a>
 <br />
-<a routerLink="/pages/automovel/listar">Listar Automóvel</a>
+<a routerLink="/pages/automovel/listar">Listar Automóveis</a>
 <br />
 <a routerLink="/pages/aluguel/cadastrar">Cadastrar Aluguel</a>
 <br />
