--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <br />
 <a routerLink="/pages/aluguel/cadastrar">Cadastrar Aluguel</a>
 <br />
-<a routerLink="/pages/aluguel/listar">Listar Alugueis</a>
+<a routerLink="/pages/aluguel/listar">Listar Aluguéis</a>
 
 <router-outlet> </router-outlet>
 <!-- É aqui que os componentes vão entrar -->
