--- a/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
@@ -1,24 +1,31 @@
-<h2>Cadastrar Cliente</h2>
-
-<div id="nome">
-  <label for="txtNome">Nome</label>
-  <input type="text" id="txtNome" [(ngModel)]="nome" />
-</div>
-<div id="cpf">
-  <label for="txtCpf">CPF</label>
-  <input type="text" id="txtCpf" [(ngModel)]="cpf" />
-</div>
-<div id="email">
-  <label for="txtEmail">E-mail</label>
-  <input type="text" id="txtCpf" [(ngModel)]="email" />
-</div>
-<div id="telefone">
-  <label for="txtCpf">Telefone</label>
-  <input type="text" id="txtCpf" [(ngModel)]="cellphone" />
-</div>
-<div id="botao">
-  <button id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
-</div>
-<div>
-
-</div>
+<mat-card class="container">
+  <mat-card-header
+    ><mat-card-title>Cadastrar Cliente</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-form-field id="nome" class="input">
+      <mat-label for="txtNome">Nome</mat-label>
+      <input matInput type="text" id="txtNome" [(ngModel)]="nome" />
+    </mat-form-field>
+    <mat-form-field id="cpf" class="input">
+      <mat-label for="txtCpf">CPF</mat-label>
+      <input matInput type="text" id="txtCpf" [(ngModel)]="cpf" />
+    </mat-form-field>
+    <mat-form-field id="email" class="input">
+      <mat-label for="txtEmail">E-mail</mat-label>
+      <input matInput type="text" id="txtCpf" [(ngModel)]="email" />
+    </mat-form-field>
+    <mat-form-field id="telefone" class="input">
+      <mat-label for="txtCpf">Telefone</mat-label>
+      <input matInput type="text" id="txtCpf" [(ngModel)]="cellphone" />
+    </mat-form-field>
+  </mat-card-content>
+  <button
+    mat-raised-button
+    color="warn"
+    id="btnCadastrar"
+    (click)="cadastrar()"
+  >
+    Cadastrar
+  </button>
+</mat-card>
