--- a/src/app/components/pages/cliente/listar-clientes/listar-clientes.component.html
+++ b/src/app/components/pages/cliente/listar-clientes/listar-clientes.component.html
@@ -1,8 +1,8 @@
-<h1>Listar Clientes</h1>
-
-<table>
-    <tr>
+<h1 class="title">Listar Clientes</h1>
+<div  class="container">
+<table >    <tr class="header1">
         <th>#</th>        
+
         <th>Nome</th>
         <th>CPF</th>
         <th>E-mail</th>
@@ -12,23 +12,27 @@
         <th>Alterar</th>
         
     </tr>
-    <tr *ngFor="let cliente of clientes">
+    <tr class="lines" *ngFor="let cliente of clientes">
         <td>{{cliente.clientId}}</td>
         <td>{{cliente.name}}</td>
         <td>{{cliente.cpf}}</td>
         <td>{{cliente.email}}</td>
         <td>{{cliente.cellphone}}</td>
-        <td>{{cliente.criadoEm}}</td> 
+        <td>{{cliente.criadoEm | date: "dd/MM/yyyy"}}</td> 
         <td>
-            
-            <button (click)="remover(cliente.clientId!)">
+            <button mat-raised-button color="warn"  class="button" (click)="remover(cliente.clientId!)">
                 Remover
             </button>
         </td>
         <td>
-            <a routerLink="/pages/cliente/cadastrar/{{ cliente.clientId }}">
-                Alterar
-            </a>
+            <button mat-raised-button color="primary" class="buttonAlt">
+                <a  routerLink="/pages/cliente/cadastrar/{{ cliente.clientId }}">
+                    Alterar
+                </a>
+            </button>
+            
         </td>
     </tr>
+
 </table>
+</div>
