--- a/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>
     <mat-form-field id="nome" class="input">
       <mat-label for="txtNome">Nome</mat-label>
-      <input matInput type="text" id="txtNome" [(ngModel)]="nome" />
+      <input matInput type="text" id="txtNome" [(ngModel)]="name" />
     </mat-form-field>
     <mat-form-field id="cpf" class="input">
       <mat-label for="txtCpf">CPF</mat-label>
@@ -20,12 +20,6 @@
       <input matInput type="text" id="txtCpf" [(ngModel)]="cellphone" />
     </mat-form-field>
   </mat-card-content>
-  <button
-    mat-raised-button
-    color="warn"
-    id="btnCadastrar"
-    (click)="cadastrar()"
-  >
-    Cadastrar
-  </button>
-</mat-card>
+  <button class="alterar" mat-raised-button color="primary" *ngIf="clientId" id="btnAlterar" (click)="alterar()">Salvar</button>
+  <button mat-raised-button color="warn" *ngIf="!clientId" id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
+ </mat-card>
