implement modified rental

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,9 @@
       <a mat-list-item routerLink="/pages/aluguel/listar"
         ><mat-icon class="icon">list</mat-icon>Listar Aluguéis</a
       >
+      <a mat-list-item routerLink="/pages/aluguel/alterar"
+        ><mat-icon class="icon">list</mat-icon>Alterar Aluguéis</a
+      >
 
     </mat-nav-list>
   </mat-sidenav>
