--- a/src/app/components/pages/aluguel/listar-aluguel/listar-aluguel.component.html
+++ b/src/app/components/pages/aluguel/listar-aluguel/listar-aluguel.component.html
@@ -35,7 +35,7 @@
         </td>
         <td>
 		<button mat-raised-button color="primary" class="buttonAlt1">
-            <a routerLink="/pages/aluguel/cadastrar/{{ pedidos.rentalId }}">
+            <a routerLink="/pages/aluguel/alterar/{{ pedidos.rentalId }}">
                 Alterar
             </a>
 			</button>
