validanting fields and update components by PUT

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
+
+  <a routerLink="/pages/login/acesso"></a>
+       
 <mat-toolbar color="primary">
   <button mat-icon-button (click)="sidenav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
   <span>Car Rentals</span>
-</mat-toolbar>
+</mat-toolbar>    
 
 <mat-sidenav-container class="container">
   <mat-sidenav #sidenav mode="side">
