--- a/src/app/components/pages/aluguel/listar-aluguel/listar-aluguel.component.html
+++ b/src/app/components/pages/aluguel/listar-aluguel/listar-aluguel.component.html
@@ -18,8 +18,8 @@
     </tr>
     <tr class="lines" *ngFor="let pedidos of pedido">
 	    <td>{{pedidos.rentalId}}</td>
-        <td>{{pedidos.clientId}}</td>
-        <td>{{pedidos.automobile?.models}}</td>
+        <td>{{pedidos.clientId}}-{{pedidos.client?.name!}}</td>
+        <td>{{pedidos.automobile?.placa!}}-{{pedidos.automobile?.models}}</td>
         <td>{{pedidos.start_Date | date:'dd/MM/yyyy'}}</td>
         <td>{{pedidos.end_Date | date: "dd/MM/yyyy"}}</td>
         <td>{{pedidos.total_Days}}</td>
