--- a/src/app/components/pages/aluguel/alterar-aluguel/alterar-aluguel.component.html
+++ b/src/app/components/pages/aluguel/alterar-aluguel/alterar-aluguel.component.html
@@ -1,7 +1,7 @@
 <mat-card class="container">
     <mat-card class="container">
         <mat-card-header>
-          <mat-card-title class="title">Cadastrar Aluguel</mat-card-title>
+          <mat-card-title class="title">Alterar Aluguel</mat-card-title>
         </mat-card-header>
           <mat-card-content>
       
@@ -18,7 +18,7 @@
 
           <mat-form-field class="input" id="total_days">
             <mat-label for="total_days">Total de dias</mat-label>
-            <input matInput type="text" name="total_days" [(ngModel)]="total_Days" />
+            <input matInput type="number" name="total_days" [(ngModel)]="total_Days" />
           </mat-form-field>
       
           <mat-form-field class="input" id="start_Date">
@@ -32,10 +32,10 @@
           </mat-form-field>
       
       
-          <mat-form-field class="input" id="Price_per_day">
-            <mat-label for="txtCpf">Preço diária</mat-label>
-            <input matInput type="text" name="Price_per_day" [(ngModel)]="total_Price" />
+          <mat-form-field class="input" id="total_Price">
+            <mat-label for="total_Price">Preço diária</mat-label>
+            <input matInput type="number" name="total_Price" [(ngModel)]="total_Price" />
           </mat-form-field>
     </mat-card-content>
-    <button mat-raised-button color="warn" id="btnCadastrar" (click)="alterar()">Salvar</button>
+    <button mat-raised-button color="warn" *ngIf="rentalId" id="btnCadastrar" (click)="alterar()">Salvar</button>
   </mat-card>
