--- a/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/components/pages/cliente/cadastrar-cliente/cadastrar-cliente.component.html
@@ -16,7 +16,7 @@
       <input matInput type="text" id="txtCpf" [(ngModel)]="email" />
     </mat-form-field>
     <mat-form-field id="telefone" class="input">
-      <mat-label for="txtCpf">Telefone</mat-label>
+      <mat-label for="cellphone">Telefone</mat-label>
       <input matInput type="text" id="txtCpf" [(ngModel)]="cellphone" />
     </mat-form-field>
   </mat-card-content>
